--- a/week1-html-css/day2-flexbox-styling/index.html
+++ b/week1-html-css/day2-flexbox-styling/index.html
@@ -4,68 +4,8 @@
     <title>Flexbox Pricing Table</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        font-family: "Sono", sans-serif;
-      }
-      .pricing-container{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        gap:20px;
-      }
-      .pricing-plan{
-        flex-basis: 400px;
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 5px;
-        gap:2px;
-      }
-      .plan-features{
-        list-style: none;
-        text-align: center;
-      }
-      .plan-features li{
-        padding: 5px;
-        margin: 5px;
-      }
-
-      .plan-title{
-        font-weight: bold;
-        font-size: 22px;
-      }
-      .plan-price{
-        font-weight: bold;
-        font-size: 3em;
-      }
-
-      .plan-button{
-        background-color: #ff6600;
-        padding: 10px;
-        color: white;
-        border: none;
-        border-radius: 5px;
-      }
-
-
-      /* Hint: What can you do with a media query and flexbox? */
-      @media (max-width: 1250px) {
-        .pricing-container{
-        flex-direction: column;
-        height: 100%;
-      }
-      }
-    </style>
+    <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet"/>
+    <link rel="stylesheet" href="./style.css">
   </head>
 
   <body>
