Minor Changes on Day 4

--- a/week1-html-css/day4-mediaqueries/index.html
+++ b/week1-html-css/day4-mediaqueries/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Layout</title>
+    <title>Responsive Layout - Media Queries</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>My Site</h1>
+        <h1>Website Header</h1>
     </header>
     <nav>
         <a href="#">Home</a>
