--- a/week1-html-css/day5-contact-form/index.html
+++ b/week1-html-css/day5-contact-form/index.html
@@ -13,9 +13,14 @@
    <header class="container header">
     <nav>
         <ul class="navbar__header">
-            <li class="navbar__items"><a href="#">Home<a></li>
-            <li class="navbar__items"><a href="">About</a></li>
-            <li class="navbar__items"><a href="">Contact us</a></li>
+            <li class="navbar__items"><a href="#">Home</a></li>
+            <li class="navbar__items"><a href="#">About</a></li>
+            <li class="navbar__items"><a href="#">Contact us</a></li>
+            <button>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                    <path fill-rule="evenodd" d="M3 6.75A.75.75 0 0 1 3.75 6h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 6.75ZM3 12a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 12Zm0 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd" />
+                  </svg>                  
+            </button></li>
         </ul>
     </nav>
     <main class="container section">
@@ -34,9 +39,9 @@
             </div>
         </div>
     </main>
-    <footer class="container">
+    <footer class="container section">
         <div class="copyright">
-            <!-- &copy; All rights reserved -->
+           2025 - Contact Form &vert; &copy; All rights reserved
         </div>
     </footer>
    </header>
