Day 6: CSS Animations done!

--- a/week1-html-css/day6-animations/index.html
+++ b/week1-html-css/day6-animations/index.html
@@ -12,5 +12,9 @@
         <div class="box">Hover Me</div>
         <div class="box fade-in">Fade In</div>
     </div>
+
+    <div class="container">
+        <div class="loader"></div>
+    </div>
 </body>
 </html>
