--- a/week2-js/day6-dom-basics/index.html
+++ b/week2-js/day6-dom-basics/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1 id="greeting">Welcome</h1>
+    <button onclick="toggleGreeting()">Toggle Greeting</button>
+    <script src="./index.js"></script>
 </body>
 </html>
