Day 3: Event handling

--- a/week3-intermediate-js/day3-eventhandling/index.html
+++ b/week3-intermediate-js/day3-eventhandling/index.html
@@ -6,7 +6,9 @@
     <title>Event Handling</title>
 </head>
 <body>
+    <h1>You have clicked the button 0 times</h1>
     <button class="btn">Click me</button>
+    <button class="reset">Reset</button>
     <script src="./index.js"></script>
 </body>
 </html>
