Day 4: Event handling - Event propagation, preventing default actions

--- a/week3-intermediate-js/day4-event-handling-propogation/index.html
+++ b/week3-intermediate-js/day4-event-handling-propogation/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <button> Click</button>
+    </div>
+    <form action="">
+        <input type="">
+        <button>Submit</button>
+    </form>
     <script src="./script.js"></script>
 </body>
 </html>
