--- a/week3-intermediate-js/day6&7-mini-project/index.html
+++ b/week3-intermediate-js/day6&7-mini-project/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>To Do List</title>
     <link rel="stylesheet" href="./style.css">
-    <title>To do List</title>
 </head>
 <body>
+    <div class="container">
+        <h1> To Do List </h1>
+        <div>
+            <input type="text" name="task" id="task" placeholder="Add a new task">
+            <button class="add-button">Add Task</button>
+        </div>
+    </div>
+    <div class="task-container">
+        <div>Sl no</div>
+        <div>Task</div>
+        <div><button class="delete-button">Delete</button></div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
