Day 2: Practice with callbacks

--- a/week4-async-js/day2-callbacks/index.html
+++ b/week4-async-js/day2-callbacks/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <input class="inputElement" placeholder="Enter delay for Task 3 (Seconds)" type="text" name="" id="">
+    <button class="startButton"> Start Task </button>
+    <button class="resetButton"> Reset </button>
+    <p class="status"> Waiting </p>
     <script src="./script.js"></script>
 </body>
 </html>
