--- a/week4-async-js/day4-promises-error-handling/index.html
+++ b/week4-async-js/day4-promises-error-handling/index.html
@@ -7,6 +7,7 @@
     <title>Promises error handling</title>
 </head>
 <body>
+    <div>Open Console</div>
     <script src="./script.js"></script>
 </body>
 </html>
