Day 5: Async/Await basics

--- a/week4-async-js/day5-async/index.html
+++ b/week4-async-js/day5-async/index.html
@@ -7,6 +7,7 @@
     <title>Async Await</title>
 </head>
 <body>
+    <div> Open console [Press F12]</div>
     <script src="./script.js"></script>
 </body>
 </html>
