--- a/week4-async-js/day7-async-task/index.html
+++ b/week4-async-js/day7-async-task/index.html
@@ -7,6 +7,7 @@
     <title>Food Ordering App</title>
 </head>
 <body>
+    <div>Open Console, F12</div>
     <script src="./script.js"></script>
 </body>
 </html>
