Day 2: Fetch API - error handling

--- a/week5-fetch-api-and-project/day2-fetchapi-error-handling/index.html
+++ b/week5-fetch-api-and-project/day2-fetchapi-error-handling/index.html
@@ -7,6 +7,15 @@
     <title>Fetch - API Error handling</title>
 </head>
 <body>
-    
+    <button style="cursor: pointer;
+    border: none;
+    padding: 1rem;
+    font-size: 0.75rem;
+    color:white;
+    background-color: crimson;
+    border-radius: 0.25rem;">Fetch posts</button>
+    <ul class="posts-list">
+    </ul>
+    <script src="./script.js"></script>
 </body>
 </html>
