Day 3: Fetch API - error handling

--- a/week5-fetch-api-and-project/day3-fetch-postmethod/index.html
+++ b/week5-fetch-api-and-project/day3-fetch-postmethod/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
+    <form  method="post">
+        <input type="text" placeholder="post title" class="post-title-input">
+        <input type="text" placeholder="post body" class="post-body-input">
+        <button type="submit">Submit</button>
+    </form>
+
+    <p class="response"></p>
     <script src="./script.js"></script>
 </body>
 </html>
