Day 4: Product Catalog App - HTML Structure made

--- a/week5-fetch-api-and-project/day4-7-product-catalog-app/index.html
+++ b/week5-fetch-api-and-project/day4-7-product-catalog-app/index.html
@@ -8,6 +8,26 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <script src="./script.js"></script>
+<nav>
+  <div class="navbar-left">
+    <ul>
+      <li>Product Catalog App</li>
+    </ul>
+  </div>  
+  <div class="navbar-right">
+    <ul>
+      <li>Home</li>
+      <li>Products</li>
+      <li>Cart</li>
+      <li>About Us</li>
+    </ul>
+  </div>
+</nav>
+<main>
+  <div class="products-container">
+    
+  </div>
+</main>
+<script src="./script.js"></script>
 </body>
 </html>
