Day 6: Adding search element

--- a/week5-fetch-api-and-project/day4-7-product-catalog-app/index.html
+++ b/week5-fetch-api-and-project/day4-7-product-catalog-app/index.html
@@ -24,6 +24,9 @@
   </div>
 </nav>
 <main>
+  <div class="input-div">
+    <input type="text" placeholder="Search products">
+  </div>
   <div class="products-container">
   </div>
 </main>
