--- a/week5-fetch-api-and-project/day4-7-product-catalog-app/index.html
+++ b/week5-fetch-api-and-project/day4-7-product-catalog-app/index.html
@@ -26,6 +26,11 @@
 <main>
   <div class="input-div">
     <input type="text" placeholder="Search products">
+    <div>
+      <select class='category-select' name="" id="">
+        
+      </select>
+    </div>
   </div>
   <div class="products-container">
   </div>
