--- a/week6-modules-and-local-storage/expense-tracker/index.html
+++ b/week6-modules-and-local-storage/expense-tracker/index.html
@@ -8,6 +8,20 @@
   <title>Expense Tracker App</title>
 </head>
 <body>
+  <h1>Expense Tracker</h1>
+  <form>
+    <div>
+      <label for="">Title</label>
+      <input type="text">
+    </div>
+    <div>
+      <label for="">Amount</label>
+      <input type="number">
+    </div>
+    <div>
+      <button type="submit"> Add Expense </button>
+    </div>
+  </form>
   <script type="module" src="./js/app.js"></script>
 </body>
 </html>
