Day 1: Closures Basics

--- a/week6-modules-and-local-storage/expense-tracker/index.html
+++ b/week6-modules-and-local-storage/expense-tracker/index.html
@@ -27,20 +27,20 @@
     </form>
   </div>
   <div class="list-container">
-    <li class="list">
+    <ul class="list">
       <div class="align-div">
-        <ul>Sl. No</ul>
+        <li>Sl. No</li>
       </div>
       <div class="align-div">
-        <ul>Name of the Budget</ul>
+        <li>Name of the Budget</li>
       </div>
       <div class="align-div">
-        <ul>Price</ul>
+        <li>Price</li>
       </div>
       <div class="align-div">
-        <ul>Action</ul>
+        <li>Action</li>
       </div>
-    </li>
+    </ul>
   </div>
   <script type="module" src="./js/app.js"></script>
 </body>
