--- a/week8-practice/functions/7k.html
+++ b/week8-practice/functions/7k.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <button onclick="
-      console.log(`Cart quantity: ${cartQuantity}`);
+      alert(`Cart quantity: ${cartQuantity}`);
     ">Show Quantity</button>
 
     <button onclick="
