Lesson 10 - Excercise Solved

--- a/week8-practice/dom/9-dom-projects.html
+++ b/week8-practice/dom/9-dom-projects.html
@@ -20,7 +20,7 @@
     ">Calculate</button>
     <p class="js-total-cost"></p>
 
-    <input class="js-key-input" onkeypress="dynamicDisplay();" type="text">
+    <input class="js-key-input" onkeyup="dynamicDisplay();" type="text">
     <p class="js-para"></p>
 
     <script>
