add example URL parameters

--- a/Week9-amazon-project/javascript-amazon-project-main/orders.html
+++ b/Week9-amazon-project/javascript-amazon-project-main/orders.html
@@ -186,5 +186,10 @@
         </div>
       </div>
     </div>
+    <script>
+      const url = new URL(window.location.href);
+      const orderId = url.searchParams.get('orderId');
+      console.log(orderId);
+    </script>
   </body>
 </html>
