--- a/react-course/chatbot.html
+++ b/react-course/chatbot.html
@@ -9,10 +9,10 @@
       font-family: Arial, Helvetica, sans-serif;
     }
     .container{ 
+      margin-top: 20px;
       max-width: 600px;
       margin-left: auto;
       margin-right: auto;
-      border:2px solid red
     }
     .input-container{
       display: flex;
@@ -37,6 +37,33 @@
       cursor: pointer;
     }
 
+    .chat-messages{
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 16px;
+
+    }
+
+    .user-message{
+      display: flex;
+      justify-content: end;
+      align-items: start;
+    }
+    .robot-message{
+      display: flex;
+      align-items: start;
+    }
+
+    .chat-message{
+      align-self: center;
+      margin-left: 10px;
+      margin-right: 10px;
+      background-color: rgb(236, 236, 236);
+      max-width: 300px;
+      padding: 1rem;
+      border-radius: 0.5rem;
+    }
   </style>
 
     <body>
